--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,8 @@
   --heading-color: #3e5055; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #2b1e76; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
+  --background-dark: #0e0f10;
+  --background-dark-suble: #2c2d2f;
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
 
@@ -62,8 +64,10 @@
 --------------------------------------------------------------*/
 body {
   color: var(--default-color);
-  background-color: var(--background-color);
-  font-family: var(--default-font);
+  font-family: Nunito, serif;
+}
+main{
+  background-color: var(--background-dark);
 }
 
 a {
